--- a/test-run/css/styles.css
+++ b/test-run/css/styles.css
@@ -22,14 +22,23 @@ nav {
     width:100%;
 
 }
-nav, ul {
+nav, ul.right {
     display: grid;
-    grid-template-columns: 50% 1fr 1fr 1fr;
+    grid-template-columns: 35% 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
     grid-template-areas: 
-    "open menu1 menu2 menu3";
+    "menu1 menu2 menu3";
     list-style-type: none;
-    width:100%;
+    width:90%;
+}
+ul.left {
+    display:grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    "about store";
+    list-style-type: none;
+    width: 90%;
 }
 .nav-item {
     padding: 0 10px 10px 0;
@@ -39,12 +48,6 @@ nav, ul {
 .nav-link {
     text-decoration: none;
 }
-.open {
-    grid-area: open;
-    width: auto;
-    float: left;
-    clear:right;
-}
 .menu1 {
     grid-area: menu1;
 }
@@ -53,6 +56,12 @@ nav, ul {
 }
 .menu2 {
     grid-area: menu3;
+}
+.about {
+    grid-area: about;
+}
+.store {
+    grid-area: store;
 }
 h1 > img {
     width: 175px;
