incorporate index-start changes into master

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,76 @@
 @import url("reset.css");
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-.navbar {
-    /* main element*/
-    display: inline;
-    font-size:10px;
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: 1.75px;
+html {
+    font-size: 16px;
 }
-.nav-container {
-    /* nav ul */
-    background-color:lightgray;
-    list-style-type: nones;
+h1 {
+    font-size:40px;
+}
+small {
+    font-size: 20px;
+    font-style: italic;
+    color: #0069b3;
+}
+body {
+    display: grid;
+}
+nav {
+    display: grid;
+    font-size: small;
+    font-weight: bolder;
+    /** study on the grid and flex later */
+    color: #0069b3;
+    width:100%;
+
+}
+nav, ul.right {
+    display: grid;
+    grid-template-columns: 35% 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+    "menu1 menu2 menu3";
+    list-style-type: none;
+    width:90%;
+}
+ul.left {
+    display:grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    "about store";
+    list-style-type: none;
+    width: 90%;
 }
 .nav-item {
-    display: inline;
-    border-right: .7px solid black;
+    padding: 0 10px 10px 0;
+    text-decoration: none;
+    width:90px;
+}
+.nav-link {
+    text-decoration: none;
+}
+.menu1 {
+    grid-area: menu1;
+}
+.menu2 {
+    grid-area: menu2;
+}
+.menu2 {
+    grid-area: menu3;
+}
+.about {
+    grid-area: about;
+}
+.store {
+    grid-area: store;
+}
+h1 > img {
+    width: 175px;
+}
+.container {
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+.row {
+   grid-template-columns: ;
 }
