--- a/test-run/css/styles.css
+++ b/test-run/css/styles.css
@@ -1,6 +1,8 @@
 @import url("reset.css");
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap');
 html {
     font-size: 16px;
+    font-family: 'Montserrat' sans-serif;
 }
 h1 {
     font-size:40px;
@@ -32,6 +34,7 @@ nav, ul.right {
     width:90%;
 }
 ul.left {
+    font-family: 'Roboto' , sans-serif;
     display:grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: auto auto;
@@ -66,10 +69,12 @@ ul.left {
 h1 > img {
     width: 175px;
 }
+/** end menu start body */
 .container {
     display:grid;
-    grid-template-columns: repeat(12, 1fr);
+    text-align: center;
+    grid-template-columns: 2fr 4fr 2fr;
 }
-.row {
-   grid-template-columns: ;
+.g-logo {
+    margin-top: 25%;
 }
