--- a/test-run/css/styles.css
+++ b/test-run/css/styles.css
@@ -1,4 +1,5 @@
 @import url("reset.css");
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 html {
     font-size: 16px;
 }
