--- a/test-run/css/flex.css
+++ b/test-run/css/flex.css
@@ -20,6 +20,9 @@ small {
     flex-direction: column;
     justify-content: space-around;
 }
+a {
+    text-decoration: none;
+}
 nav ul {
     list-style-type: none;
     display:flex;
@@ -39,6 +42,19 @@ padding-right: 5px;
     width: 60%;
 }
 .g-logo {
-    width: 175px;
-    text-align:center;
+    margin-top: 15%;
+    margin-bottom: 10%;
+}
+.search-bar {
+    justify-items: baseline;
+}
+.footer ul {
+    list-style-type: none;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+}
+.ft-item {
+    padding-right: 5px;
 }
