--- a/test-run/css/flex.css
+++ b/test-run/css/flex.css
@@ -53,22 +53,22 @@ nav ul {
     width: 85%;
 }
 .g-logo {
-    margin-top: 15%;
-    margin-bottom: 10%;
+    margin-top: 10%;
+    margin-bottom: 6%;
 }
 .search-bar {
     justify-items: baseline;
 }
 input[type='search'] {
-    background-image: url('../images/search-icon.png') ;
+    background-image: url('../images/search-icon-22.png') ;
     background-repeat: no-repeat;
     height:50px;
-    background-position-x: 3px;
+    background-position-x: 15px;
     background-position-y: center;
     width: 100%;
-    border-radius: 15px;
+    border-radius: 22.5px;
     opacity: .4;
-    margin-bottom: 20%;
+    margin-bottom: 4%;
 }
 .footer {
     background-color:linen;
